修改首页主要方向悬浮效果

--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -5941,7 +5941,7 @@ wpo-hero-slider-s4
 .wpo-blog-section .wpo-blog-item .wpo-blog-content h2 a:hover,
 .wpo-blog-section-s2 .wpo-blog-item .wpo-blog-content h2 a:hover,
 .wpo-blog-section-s3 .wpo-blog-item .wpo-blog-content h2 a:hover {
-  color: #FE693E;
+  color: #005DFF;
 }
 .wpo-blog-section .wpo-blog-item .wpo-blog-content p,
 .wpo-blog-section-s2 .wpo-blog-item .wpo-blog-content p,
