--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -2755,7 +2755,7 @@ img {
     width: 100%;
   }
   .wpo-site-header .mobail-menu button {
-    background-color: #FE693E;
+    background-color:#0062FF;
     width: 40px;
     height: 35px;
     border: 0;
@@ -3587,7 +3587,7 @@ img {
 .wpo-static-hero .swiper-pagination-bullet-active,
 .static-hero-s2 .swiper-pagination-bullet-active {
   color: #fff;
-  background: #FE693E;
+  background: #0056EA;
   width: 10px;
   height: 10px;
   text-align: center;
