--- a/assets/sass/page/_contact.scss
+++ b/assets/sass/page/_contact.scss
@@ -148,9 +148,10 @@
 		}
 
 		.office-info-item{
-			text-align: center;
-			box-shadow: 0px 5px 15px 0px rgba(62, 65, 159, 0.1);
-			padding: 40px;
+    text-align: center;
+    box-shadow: 0px 5px 15px 0px rgba(62, 65, 159, 0.1);
+    padding: 40px;
+    border-radius: 20px;
 
 			.office-info-icon{
 				width: 85px;
