--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -10227,6 +10227,7 @@ Service Page Title Styles (Custom for service.html)
   text-align: center;
   box-shadow: 0px 5px 15px 0px rgba(62, 65, 159, 0.1);
   padding: 40px;
+  border-radius: 20px;
 }
 .wpo-contact-pg-section .office-info .office-info-item .office-info-icon {
   width: 85px;
